--- a/css/media_queries.sass
+++ b/css/media_queries.sass
@@ -1,4 +1,25 @@
 /* Media Queries Section */
+@media screen and (max-width: 1284px)
+
+  footer .icon
+    top: auto
+    bottom: 5%
+    left: 50%
+    transform: translateX(-50%)
+    width: 50px
+
+  .contact
+    .row
+      padding-top: 40px
+      min-height: 650px
+
+  .involvement .row
+    padding: 50px 0
+
+
+  .visit
+    .card-container .card
+      width: 50%
 
 @media screen and (max-width: 1111px)
 
@@ -14,10 +35,6 @@
         li
           margin: 2px
 
-  .column
-    .row
-      width: 50%
-
   .text
     margin: 0 auto
 
@@ -30,145 +47,181 @@
       p
         margin: 20px 50px
 
+  .info-pages
+    .card-container
+      width: 95%
+      .card
+        margin: 10px
+        height: 500px
+
 @media screen and (max-width: 780px)
 
   header
-    height: 350px
-
-    .icon
-      width: 50px
-
-    .hero-banner
-      top: 25% !important
+    #mobile-button
+      display: block
 
     .nav
-      width: 200px
-      top: 34%
-
-      .nav-list
-        white-space: normal
-        background-color: transparent
-
-        a
-          margin: 0
-          background-color: $bg
-
-        li
-          width: 100%
-          display: inline-block
-          margin: 2px
-
-  footer
-    padding: 15px 0
-    flex-direction: column
-    height: 200px
-    justify-content: space-around
-
-  .column
-    .row
-      padding: 100px 0
-      margin: 0
-      width: 100%
-
-      p
-        margin: 10px 40px
-
-  .column:nth-child(even)
-    flex-direction: column
-    height: auto
-    position: relative
-    background-color: $secondary-opacity
-
-    h2
-      color: $font
-
-    p
-      color: $font
-
-    .img
-      z-index: -10
+      display: none
+      background-color: $bg
       position: absolute
       top: 0
       left: 0
-      height: 100%
+      right: unset
+      transform: unset
       width: 100%
+      height: 250px
+
+      .nav-list
+        height: 100%
+        display: flex
+        flex-direction: column
+        justify-content: center
+        align-items: center
+
+
+  footer
+   .link-container
+     margin: 80px 10px 0 10px
 
   .text
-    width: 100%
-    margin: 0
+    width: 90%
 
-  .text-blob
-    height: auto
+  .index .description
+    width: 50%
 
-    .text
-      margin: 100px 0
+
 
   .exhibition
-    .column
+
+    .half
+      min-height: 50%
+      width: 100%
+
+    .space
+      height: 1200px
+      min-height: 1200px
+      flex-direction: column
+
+    #biology
+      height: 600px
+      min-height: 600px
+
+  .admission, .visit
+    height: auto
+
+    .card-container
+      padding: 50px 0
       height: auto
       flex-direction: column
-
-      .half
-        min-height: 600px
-        width: 100%
-
-        p
-          margin: 20px
-
-  .contact
-    .column
-      padding: 50px 0
-      flex-direction: column
-
-      .row
-        margin: 50px 0
-        min-height: 510px
-        border: none
-        width: 80%
-        padding: 0
-
-        p
-          margin: 16px 0
-
+      .card
+        width: 90%
+        height: auto
+        .card-text
+          margin: 20px auto
+          p
+            width: 80%
 
 @media screen and (max-width: 520px)
 
   header
-    height: 500px
-
-    .nav
-      top: 48%
+    .icon
+      width: 50px
+      top: 20%
+      transform: none
 
     .hero-banner
-      top: 25% !important
-
+      width: 100%
       h1
-        white-space: normal !important
-        margin-bottom: 30px
+        width: 100%
+        word-wrap: break-word
+        white-space: inherit
+
+  footer
+    height: auto
+    flex-direction: column
+
+    .link-container
+      width: 50%
+      margin: 20px
+
+    .icon
+      top: 5%
+      bottom: auto
+      left: 5%
+      transform: none
+
+  .text-blob
+    height: 500px
+
+    .call-to-action
+      width: 90%
+      a
+        width: 100%
+
+  .index
+    .about
+      flex-direction: column
+      min-height: 800px
+
+    .description
+      height: 50%
+      width: 90%
+
+    .img
+      width: 100%
+      height: 50%
+
+  .exhibition
+    .space
+      height: 1400px
+      min-height: 1400px
+
+    #biology
+      height: 700px
+      min-height: 700px
 
   #contact
     #address_map #address
-      width: 75%
+      width: 80%
 
-    .contact-column .contact-info
-      min-width: auto
-      width: 90%
 
-    svg
-      width: 90%
+    .contact-column
+      .contact-info
+        width: 100%
+        min-width: auto
 
-  .contact
+        h2
+          width: 100%
+          word-wrap: break-word
 
-    .column
-      .row
-        width: 95%
+        .contact-bg
+          width: 100%
+          word-wrap: break-word
+
+
 
 @media screen and (max-width: 380px)
+
+  .index .about
+    min-height: 1000px
 
   .column
     .row
       p
         margin: 10px 5px
+
+  .exhibition
+    .space
+      height: 1600px
+      min-height: 1600px
+
+    #biology
+      height: 1000px
+      min-height: 1000px
+
+  .social
+    flex-direction: column
+
 
 
 /* Visit Media Queries Section */
@@ -196,12 +249,3 @@
   .involvement .row
     padding: 50px 0
 
-@media screen and (max-width: 1284px)
-
-  .contact
-    .row
-      padding-top: 40px
-      min-height: 650px
-
-  .involvement .row
-    padding: 50px 0
