--- a/css/pages/index.sass
+++ b/css/pages/index.sass
@@ -3,24 +3,34 @@
 .index
   //.text-blob p
   //  color: $font
+  .text-blob
+    background-color: $bg
+    p
+      color: $font
+
+  .about
+    height: 500px
 
   .description
     width: 32%
-
+//
 //#about
 //  background: url(../images/index_bg_01.jpg) no-repeat center center
 //  background-size: cover
+//
+//  .text p
+//    color: $font
 
 #what-we-do
   background: url(../images/index_bg_02.jpg) no-repeat center center
   background-size: cover
 
-#club
-  background: url(../images/index_bg_01.jpg) no-repeat center center
-  background-size: cover
-
-  .text p
-    color: $font
+//#club
+//  background: url(../images/index_bg_03.jpg) no-repeat center center
+//  background-size: cover
+//
+//  .text p
+//    color: $font
 
 #for-kids
   background: url(../images/index_bg_04.jpg) no-repeat center center
@@ -29,19 +39,22 @@
 //#entrance
 //  background: url(../images/index_bg_05.jpg) no-repeat center center
 //  background-size: cover
+//
+//  .text p
+//    color: $font
 
 #for-teachers
   background: url(../images/index_bg_06.jpg) no-repeat center center
   background-size: cover
 
-#accessibility
-  background: url(../images/index_bg_07.jpg) no-repeat center center
-  background-size: cover
-
-  .text p
-    color: $font
+//#accessibility
+//  background: url(../images/index_bg_07.jpg) no-repeat center center
+//  background-size: cover
+//
+//  .text p
+//    color: $font
 
 #for-researchers
-  background: url(../images/index_bg_06.jpg) no-repeat center center
+  background: url(../images/index_bg_08.jpg) no-repeat center center
   background-size: cover
 
