--- a/css/pages/involvement.sass
+++ b/css/pages/involvement.sass
@@ -1,19 +1,23 @@
 /* Involvement Section */
 
 .info-pages
+  .card-container
+    width: 80%
+    margin: 0 auto
+
   .main
     height: auto
     flex-direction: column
 
-#support
-  background: url(../images/exhibition_bg_01.jpg) no-repeat center center
+#involvement-bg
+  background: url(../images/involvement_bg_01.jpg) no-repeat center center
   background-size: cover
-
-#volunteer
-  background: url(../images/exhibition_bg_04.jpg) no-repeat center center
-  background-size: cover
-
-#internships
-  background: url(../images/exhibition_bg_05.jpg) no-repeat center center
-  background-size: cover
-
+//
+//#volunteer
+//  background: url(../images/exhibition_bg_04.jpg) no-repeat center center
+//  background-size: cover
+//
+//#internships
+//  background: url(../images/exhibition_bg_05.jpg) no-repeat center center
+//  background-size: cover
+//
